// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationItem it should render children inside 1`] = `
<li
  className="NavigationItem"
  onClick={[Function]}
>
  <div>
    <p>
      Test
    </p>
  </div>
</li>
`;

exports[`NavigationItem it should render children inside and have active class 1`] = `
<li
  className="NavigationItem active"
  onClick={[Function]}
>
  <div>
    <p>
      Test
    </p>
  </div>
</li>
`;
